[fix] span[contenteditable] has extra padding on padding
fixes #2

--- a/bootstrap-expandable-input.css
+++ b/bootstrap-expandable-input.css
@@ -36,4 +36,7 @@ html body [contenteditable].contenteditable-inline br {
 html body [contenteditable].contenteditable-inline:after {
   content: ' ';
   font-size: 0;
+  display: inline-block;
+  width: 0;
+  height: 0;
 }
